# doot

./: Cargo.toml  README.md  example.doot.yaml
configs/: init.vim  kitty.conf  sway.config
configs/waybar/: style.css  waybar.config
src/: main.rs
