[package]
name = "doot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
figment = { version = "0.10", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
